<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- english -->
	
    <string name="app_name">Doppelkopf</string>
    <string name="app_version">v2.5</string>  
    <string name="start_action_about">About this App</string>
    <string name="start_action_load_save_game">Start last game</string>
    <string name="str_saved_game">Saved games</string>
    <string name="str_saved_game_delete_all">Delete all saved game</string>
     <string name="str_saved_game_delete">Delete saved game</string>
    <string name="str_saved_game_delete_all_q">Are you sure you want to delete ALL saved games?</string>
    <string name="str_saved_game_delete_q">Are you sure you want to delete the saved game?</string>  
    <string name="action_about">About this App</string>  
    <string name="str_new_game">Create new game</string>
    <string name="str_start_fun">Doppelkopf</string>
    <string name="str_player">Player</string>
    <string name="str_player_create">Create player</string>
    <string name="str_player_add">Add player</string>
    <string name="str_number_short">Nr.</string>
    
    <string name="str_game_settings">Game settings</string>
    <string name="str_change_game_settings">Change game settings</string>
    <string name="str_change_game_settings_save">Save game settings</string>
    <string name="str_change_game_settings_finish">game settings changed</string>
    <string name="str_change_game_settings_save_q">Save game settings?</string>
    <string name="str_change_game_settings_delete_bockrounds">Delete bockround</string>
    <string name="str_change_game_settings_delete_bockrounds_q">Existing bockrounds will be overwritten (deleted)</string>    
    <string name="str_edit_round">Edit round</string>
    <string name="str_edit_round_q">Edit round?</string>
    <string name="str_edit_round_abort_q">Abort editing round?</string>
    <string name="str_edit_round_not_possible">You can\'t edit this round</string>
    <string name="str_edit_round_info">Edit a round with a long press on the round entry</string>
    <string name="str_edit_round_finish">Round successfully changed</string>
    <string name="str_edit_round_error">Error: round coudn\'t be changed!</string>
    <string name="str_active_player">Active players</string>
    <string name="str_bock_limit">Limit bock</string>
    <string name="str_bock">Bock</string>
    <string name="str_bockround">Bockround</string>
    <string name="str_bockrounds">Bockrounds</string>
    <string name="str_bock_preview_on_off">Bock preview on/off</string>
    <string name="str_bock_preview_not_posible">Bock preview not available if Bocklimit is \"0\"</string>
    <string name="str_mark_suspend">Mark suspended players</string>
    <string name="str_solo">Solo</string>
    <string name="str_solo_special">*Solo*</string>
    <string name="str_start_game">Start game</string>
    <string name="str_error_player_name">Invalid, duplication or missing player name</string>
    <string name="str_image">Image</string>
    <string name="anim_inout">300</string>
    
    <string name="str_game">Current game</string>
    <string name="str_game_cnt_variant">Count variant</string>
    <string name="str_game_cnt_variant_normal">Standard</string>
    <string name="str_game_cnt_variant_lose">Loser</string>
    <string name="str_game_cnt_variant_win">Winner</string>
    <string name="str_game_add_round_here">Add new round (wipe)</string>
    <string name="str_game_new_round">Add new round</string>
    <string name="str_game_add_new_round">Add round</string>
    <string name="str_game_round">Round</string>
    <string name="str_game_current_round">Current Round</string>
    <string name="str_game_prev_round">Previous round</string>
    <string name="str_game_points">Points</string>
    <string name="str_game_points_choose_winner">Choose: winner (click)</string>
    <string name="str_game_points_choose_winner_and_suspend">Winner (click) + suspended player(s) (long press)</string>
    <string name="str_game_points_choose_bock">New bock rounds</string>
    <string name="str_game_switch_list_view">Change view</string>
    <string name="str_error_game_new_round_data">Invalid values. Please check points and count of winner/loser/(suspended player)</string>
    <string name="str_round_type_win_solo">Won solo</string>
    <string name="str_round_type_lose_solo">Lost solo</string>
    <string name="str_round_type_solo">Solo</string>
    <string name="str_round_type_2vs2">2vs2</string>
    <string name="str_round_type_3vs2">3vs2</string>
       
    <string name="str_delete_file">Delete file</string>
    <string name="str_delete_files">Delete files</string>
    <string name="str_filename">Filename</string>
    <string name="str_file">File</string>
    <string name="str_error_exit">Fatal Error</string>
    <string name="str_exit_game">Quit game</string>
    <string name="str_exit_game_q">Do really want to quit this game?</string>
    <string name="str_error_game_start">Error: can\'t start game</string>
    <string name="str_error_load_game_for_change_game_settings">Error: game settings couldn\'t be loaded</string> 

    <string name="str_dp_seperator">:</string>
    <string name="str_edit">edit</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_accept">OK</string>
    <string name="str_abort">Abort</string>
    <string name="str_close">Close</string>
    
    <!-- INFO/HELP -->
    <string name="str_info">Info</string>
    <string name="str_info_cnt_cnt_variants">Count variants</string>
    <string name="str_info_cnt_cnt_variant_std_name">Standard</string>
    <string name="str_info_cnt_cnt_variant_win_name">Loser</string>
    <string name="str_info_cnt_cnt_variant_lose_name">Winner</string>
    <string name="str_info_cnt_cnt_variant_standard">The losers get points subtracted, winners get points added</string>   
    <string name="str_info_cnt_cnt_variant_lose">Only the losing players get points subtracted. The points of the winning or suspended players will be untouched. (reverse of count variant winner).</string> 
    <string name="str_info_cnt_cnt_variant_win">Only the winning player get points added. The points of the losing or suspended players will be untouched. (reverse of count variant loser).</string>
    <string name="str_info_active_players_info">Active player: You can start a game with 5 players which have only 4 active player. This means that every round 1 player has to be suspended (This player can be set every round individually).</string> 
    <string name="str_info_bock_cnt_info">On a bock round the round points will be doubled. Bock round limit can bet set between 0&#8211;4 (0=no doubling, I = points x2, II = points x4,III = points x8 etc.).</string> 
    
    <string-array name="infoSettingsDialogEntry1">
    	<item name="title">@string/str_game_cnt_variant_normal</item>
    	<item name="text">@string/str_info_cnt_cnt_variant_standard</item>
	</string-array>
	
	 <string-array name="infoSettingsDialogEntry2">
    	<item name="title">@string/str_game_cnt_variant_lose</item>
    	<item name="text">@string/str_info_cnt_cnt_variant_lose</item>
	</string-array>
	
	<string-array name="infoSettingsDialogEntry3">
    	<item name="title">@string/str_game_cnt_variant_win</item>
    	<item name="text">@string/str_info_cnt_cnt_variant_win</item>
	</string-array>
	
	<array name="infoSettingsDialogEntries">
    	<item>@array/infoSettingsDialogEntry1</item>
    	<item>@array/infoSettingsDialogEntry2</item>
    	<item>@array/infoSettingsDialogEntry3</item>
	</array>
    


    <string name="str_rights">All rights reserved</string>
    <string name="str_disclaimer">
		    Disclaimer of Warranty: \nThis Software (Android-Application) are provided on an "as-is" basis, without warranty of any kind, 
		    including without limitation the warranties of merchantability, fitness for a particular purpose and 
		    non-infringement. The entire risk as to the quality and performance of the computations is borne by you. 
		    Should the results prove to be in error, you assume the entire cost of any required service and repair, 
		    and any consequential damage. Use at your own risk. Use of the Software for your own personal and private use only. All rights reserved\n\nHaftungsausschluss:\nDiese Software (Android-Applikation) "wie sie ist" wird ohne jegliche Gewährleistung für Funktion, 
			Korrektheit oder Fehlerfreiheit zur Verfügung gestellt. Für jeden direkten oder indirekten Schaden - 
			insbesondere Schaden an anderer Software, schaden an Hardware, Schaden durch Nutzungsausfall, 
			Schaden durch Funktionsuntüchtigkeit oder Fehler der Software, kann der Autor nicht haftbar gemacht werden. 
			Ausschließlich der Benutzer haftet für die Folgen der Benutzung dieser Software. 
			Diese Software wurde mit größter Sorgfalt entwickelt, jedoch können Fehler niemals ausgeschlossen werden. 
			Es kann daher keine Gewähr für die Sicherheit ihrer Daten übernommen werden. Benutzung auf eigene Gefahr.
			Diese App darf ausschließlich nur von Privatpersonen und nur für private Zwecke benutzt und eingesetzt werden \n 
			(Druch die Verwendung der Software stimmen sie dem Haftungsausschluss zu)Alle Rechte vorbehalten</string>
</resources>