<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
	android:id="@+id/game_add_round_main_layout"
    tools:context=".GameActivity" >
    
    <View 
		android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/gray"    />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/fragment_game_round_number"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/str_game_points"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <EditText
	                android:id="@+id/game_add_round_points_entry"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="number" >
	
	                <requestFocus />
	            </EditText>
	            
	        </LinearLayout>

	        <TextView
	            android:id="@+id/game_add_round_bock_points"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/gray_dark" />
	
	        <GridView
	            android:id="@+id/game_add_round_point_grid"
	            android:layout_width="fill_parent"
	            android:layout_height="100dp"
	            android:layout_marginTop="10dp"
	            android:descendantFocusability="beforeDescendants"
	            android:focusableInTouchMode="true"
	            android:gravity="center_horizontal|center_vertical"
	            android:numColumns="8" >
	        </GridView>
	
	        <LinearLayout
	            android:id="@+id/game_add_round_playersection"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:orientation="vertical" >
	
	            <include
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                layout="@layout/categorie_header_with_icon_small" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:id="@+id/game_add_round_bock_container"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:gravity="center"
	                android:text="@string/str_game_points_choose_bock"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <RadioGroup
	                android:id="@+id/game_add_round_bock_radio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:orientation="horizontal" >
	
	                <RadioButton
	                    android:id="@+id/game_add_round_bock_radio_yes"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/str_yes"
	                    android:textStyle="bold" />
	
	                <RadioButton
	                    android:id="@+id/game_add_round_bock_radio_no"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checked="true"
	                    android:text="@string/str_no"
	                    android:textStyle="bold" />
	            </RadioGroup>
	        </LinearLayout>
	
	        <Button
	            android:id="@+id/btn_game_add_new_round"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="12dp"
	            android:text="@string/str_game_add_new_round" />

	    </LinearLayout>
    </ScrollView>
</LinearLayout>